--- a/api/.env.example
+++ b/api/.env.example
@@ -8,8 +8,10 @@ DEBUG=false
 
 # Database Pool Settings
 # Adjust based on your workload
-DB_POOL_SIZE=10
-DB_MAX_OVERFLOW=20
+# min_size: minimum number of connections to maintain in the pool
+# max_size: maximum number of connections allowed in the pool
+DB_POOL_MIN_SIZE=2
+DB_POOL_MAX_SIZE=20
 DB_POOL_TIMEOUT=30
 
 # API Settings
