--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: "image"
-          image-ref: "python:3.4-alpine"
+          image-ref: "cgr.dev/chainguard/python"
           ignore-unfixed: true
           vuln-type: "os,library"
           format: "sarif"
