--- a/.github/apko/baseimage-dev.yaml
+++ b/.github/apko/baseimage-dev.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/chainguard-dev/apko/refs/heads/main/pkg/build/types/schema.json
 #
-# debug base container
+# Base on: https://images.chainguard.dev/directory/image/static/sbom
 
 contents:
   keyring:
